--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -236,14 +236,14 @@ width:182px;
 padding-left:12px;
 text-align:center;
 margin-top:1px;
-background: rgb(255,197,120); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(255,197,120,1) 0%, rgba(251,157,35,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,197,120,1)), color-stop(100%,rgba(251,157,35,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(255,197,120,1) 0%,rgba(251,157,35,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(255,197,120,1) 0%,rgba(251,157,35,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(255,197,120,1) 0%,rgba(251,157,35,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(255,197,120,1) 0%,rgba(251,157,35,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffc578', endColorstr='#fb9d23',GradientType=0 ); /* IE6-9 */
+background: rgba(134, 133, 133, 1); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(134, 133, 133, 1) 0%, rgba(71, 71, 71, 1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,197,120,1)), color-stop(100%,rgba(71, 71, 71, 1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(134, 133, 133, 1) 0%,rgba(71, 71, 71, 1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(134, 133, 133, 1) 0%,rgba(71, 71, 71, 1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(134, 133, 133, 1) 0%,rgba(71, 71, 71, 1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(134, 133, 133, 1) 0%,rgba(71, 71, 71, 1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(134, 133, 133, 1)', endColorstr='rgba(71, 71, 71, 1)',GradientType=0 ); /* IE6-9 */
 
 color:#FFFFFF;
 text-decoration:none;
@@ -621,6 +621,22 @@ font-weight: bold;
   padding-top:0.2em;
   text-align:left;
   font-weight:bold;
+}
+
+/* Cambie esto */
+fieldset label{
+  float:left;
+  width:25%;
+  height: 30px;
+  margin-right:0.5em;
+  padding-top:0.2em;
+  text-align:left;
+  font-weight:bold;
+}
+
+fieldset input{
+  width:35%;
+ 
 }
 
 .noReg{
@@ -1552,5 +1568,12 @@ div.box {
 	width: 178px;
 }
 
+.leftCol{
+	float: left;
+	
+}
 
-    
+#otherPhone{
+	margin-left: 164px;
+	
+}
