--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -152,7 +152,7 @@ color:#67A0F5;
 	clear:both;
 	width:100%;
 	background: #08298A;
-	height: 60px;
+	height: 50px;
 }
 
 #leftmenu
@@ -295,7 +295,7 @@ color:#67A0F5;
 	text-align:center;
 	background-color: #fff;
 	border-radius: 10px;
-	margin-top: 75px;
+	margin-top: 65px;
 	margin-left: 325px;
 	/* border : 6px solid #f7941e; */
 }
@@ -421,17 +421,14 @@ color:#67A0F5;
 /* Cambie esto */
 #menu a {
 	float: left;
-	height: 32px;
+	height: 24px;
 	display: block;
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
 	font-weight: bold;
-	padding-top: 21px;
+	/* padding-top: 21px; */
 	font-size: 15px;
-	/* padding-left:46px; */
-	/* padding-right:50px; */
-
 }
 
 .menuitemHome{
@@ -440,7 +437,6 @@ color:#67A0F5;
 	color: #ffffff;
 	background: rgb(15, 85, 173);
 	border-radius: 10px;
-	text-transform: uppercase;
 	margin-top: 3px;
 }
 
@@ -452,7 +448,8 @@ color:#67A0F5;
 	text-decoration: none;
 	color: #ffffff;
 	font-weight: bold;
-	padding-top: 13px;
+	padding-top: 14px;
+	padding-bottom: 6px;
 	font-size: 15px;
 	padding-left:13px;
 	padding-right:13px;
@@ -464,8 +461,10 @@ color:#67A0F5;
 	color: #ffffff;
 	background: rgb(15, 85, 173);
 	border-radius: 10px;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	margin-top: 3px;
+	padding-top: 1px;
+	padding-bottom: 6px;
 }
 
 .menuitemSalir a {
@@ -1563,11 +1562,13 @@ a.form_button {
 .menuitem a{
 	background: rgb(15, 85, 173);
 	border-radius: 10px;
-	height: 32px !important;
+	/* height: 32px !important; */
 	margin-top: 4px;
 	line-height: 12px;
 	
 	width: 178px;
+	padding-top: 16px;
+	padding-bottom: 3px;
 }
 
 .leftCol{
