--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -65,7 +65,8 @@ body {
 *
 {
   margin: 0 auto 0 auto;
- text-align:left;
+ 
+  text-align:left;
  
  }
  
@@ -112,7 +113,7 @@ color: #0098b6;
 
 #header
 {
-	height: 75px;
+	height: 55px;
 	width:100%;
 	background: #5CBEFF;
 	padding-bottom: 20px;
@@ -122,6 +123,7 @@ color: #0098b6;
 {
 padding-left: 60px;
 padding-top: 10px;
+width: 210px;
 }
 
 #header h1
@@ -170,7 +172,7 @@ color:#67A0F5;
 	clear:both;
 	width:100%;
 	background: #08298A;
-	height: 50px;
+	height: 41px;
 }
 
 #leftmenu
@@ -267,32 +269,6 @@ color:#67A0F5;
 }
 
 
-#leftmenu_main .active
-{
-	display:block;
-	list-style: none;
-	padding: 0px;
-	width: 180px;
-	padding-left:12px;
-	padding-top:4px;
-	line-height: 25px;
-	height: 32px;
-	text-align:center;
-	background: orange;
-	color:#FFFFFF;
-	text-decoration:none;
-	font-size:15px;
-	font-weight:bold;
-	background: rgb(247,148,30); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(255, 230, 176, 1) 1%, rgba(231, 176, 34, 1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(255, 230, 176, 1)), color-stop(100%,rgba(231, 176, 34, 1)));  /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(255, 230, 176, 1) 1%,rgba(231, 176, 34, 1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(255, 230, 176, 1) 1%,rgba(231, 176, 34, 1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(255, 230, 176, 1) 1%,rgba(231, 176, 34, 1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(255, 230, 176, 1) 1%,rgba(231, 176, 34, 1) 100%);  /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='rgba(255, 230, 176, 1)', endColorstr='rgba(231, 176, 34, 1)',GradientType=0 ); /* IE6-9 */
-
-}
 
 
 #leftmenu_main ul li a:hover
@@ -305,7 +281,7 @@ color:#67A0F5;
 #content, #contentP
 {
 	width: 808px;
-	height: 445px;
+	height: 465px;
 	padding-left:30px;
 	padding-top: 20px;
 	padding-right:30px;
@@ -313,7 +289,7 @@ color:#67A0F5;
 	text-align:center;
 	background-color: #fff;
 	border-radius: 10px;
-	margin-top: 65px;
+	margin-top: 56px;
 	margin-left: 325px;
 	/* border : 6px solid #f7941e; */
 }
@@ -439,7 +415,7 @@ color:#67A0F5;
 /* Cambie esto */
 #menu a {
 	float: left;
-	height: 24px;
+	height: 14px;
 	display: block;
 	text-align: center;
 	text-decoration: none;
@@ -466,8 +442,8 @@ color:#67A0F5;
 	text-decoration: none;
 	color: #ffffff;
 	font-weight: bold;
-	padding-top: 14px;
-	padding-bottom: 6px;
+	padding-top: 10px;
+	padding-bottom: 11px;
 	font-size: 15px;
 	padding-left:13px;
 	padding-right:13px;
@@ -493,10 +469,11 @@ color:#67A0F5;
 	text-decoration: none;
 	color: #ffffff;
 	font-weight: bold;
-	padding-top: 13px;
+	padding-top: 9px;
 	font-size: 15px;
 	padding-left:13px;
 	padding-right:13px;
+	padding-bottom: 5px;
 }
 
 #menu a:hover{
@@ -1622,8 +1599,8 @@ a.form_button {
 	line-height: 12px;
 	
 	width: 178px;
-	padding-top: 16px;
-	padding-bottom: 3px;
+	padding-top: 11px;
+	padding-bottom: 9px;
 }
 
 .leftCol{
@@ -1645,7 +1622,7 @@ fieldset .rightCol input[type="text"]{
 }
 
 #otherPhone, #otherPhone2, #otherPhone3{
-	margin-left: 167px;
+	margin-left: 194px;
 	
 }
 
@@ -1806,6 +1783,239 @@ input.search-input{
 }
 
 .table-simple{
-	width: 100%;	
+	width: 100%;
+	line-height: 20px;	
 }
 
+#SignupForm{line-height: 11px;}
+#SignupForm fieldset { border:none; }
+#SignupForm legend { font-size:18px; margin:0px; padding:10px 0px; color:#0098b6; font-weight:bold;}
+#SignupForm label { 
+  float:left;
+  width: 20%;
+  margin-right:0.5em;
+  padding-top:0.2em;
+  /* text-align:right; */
+  font-weight:bold;
+  margin-left: 26px;
+}
+.prev, .next { background-color:#0098b6; padding:5px 10px; color:#fff; text-decoration:none;}
+.prev:hover, .next:hover { background-color:#0098b6; text-decoration:none;}
+.prev { float:left;}
+.next { float:right;}
+#steps { list-style:none; width:100%; overflow:hidden; margin:0px; padding:0px; margin-top: -11px; margin-left: 0px; margin-bottom: 12px;}
+#steps li {font-size: 10px; float:left; padding:10px; color:#b0b1b3;border-radius: 10px;background: rgb(248, 248, 248);margin-right: 6px;}
+#steps li span {font-size: 9px; display:block;}
+#steps li.current { color:#000;}
+#makeWizard { background-color:#b0232a; color:#fff; padding:5px 10px; text-decoration:none; font-size:18px;}
+#makeWizard:hover { background-color:#000;}
+
+.right-style{
+	text-align: right;
+	 border-bottom: 1px solid rgb(170, 166, 166);
+	 
+	padding-bottom: 3px;"
+}
+
+.next {
+	margin-right: 185px;
+	margin-top: 30px;
+}
+
+.prev{
+    margin-top: 30px;
+    margin-left: 245px;
+}
+
+#SaveAccount{
+	margin-top: -38px;
+	margin-right: 224px;
+	background-color: rgb(14, 45, 143);
+}
+
+.days{
+	width: auto !important;
+	margin-left: 16px;
+}
+
+/* menu */
+
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+/* Starter CSS for Flyout Menu */
+#cssmenu{
+	margin-top:15px;
+	width: 212px;
+	float:left;
+	margin-left: 94px;
+
+	/* background: red; */
+}
+
+#cssmenu ul,
+#cssmenu ul li,
+#cssmenu ul ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+#cssmenu ul {
+  position: relative;
+  z-index: 597;
+  float: left;
+}
+#cssmenu ul li {
+  float: left;
+  min-height: 1px;
+  line-height: 1em;
+  vertical-align: middle;
+}
+#cssmenu ul li.hover,
+#cssmenu ul li:hover {
+  position: relative;
+  z-index: 599;
+  cursor: default;
+}
+#cssmenu ul ul {
+  margin-top: 1px;
+  visibility: hidden;
+  position: absolute;
+  top: 1px;
+  left: 99%;
+  z-index: 598;
+  width: 100%;
+}
+#cssmenu ul ul li {
+  float: none;
+}
+#cssmenu ul ul ul {
+  top: 1px;
+  left: 99%;
+}
+#cssmenu ul li:hover > ul {
+  visibility: visible;
+}
+#cssmenu ul li {
+  float: none;
+}
+#cssmenu ul ul li {
+  font-weight: normal;
+}
+
+#cssmenu ul a,
+#cssmenu ul a:link,
+#cssmenu ul a:visited {
+  display: block;
+  color: #FFFFFF;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 15px;
+  font-weight: bold;
+}
+#cssmenu > ul {
+  float: none;
+}
+#cssmenu ul {
+  border-radius: 10px;
+}
+#cssmenu > ul > li {
+	background: rgb(247,148,30); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,148,30,1) 1%, rgba(244,115,2,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(247,148,30,1)), color-stop(100%,rgba(244,115,2,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7941e', endColorstr='#f47302',GradientType=0 ); /* IE6-9 */
+	padding-top: 2px;
+	padding-bottom: 2px;
+	text-align: center;
+}
+#cssmenu > ul > li > a {
+  padding: 10px 20px;
+  text-align: center;
+}
+#cssmenu > ul > li:hover {
+  border-left: 3px solid #424242;
+}
+#cssmenu ul li:hover > a {
+  color: #424242;
+}
+#cssmenu > ul > li:hover {
+  	background: rgb(247,148,30); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,148,30,1) 1%, rgba(244,115,2,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(247,148,30,1)), color-stop(100%,rgba(244,115,2,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(247,148,30,1) 1%,rgba(244,115,2,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7941e', endColorstr='#f47302',GradientType=0 ); /* IE6-9 */
+  
+}
+/* Sub Menu */
+#cssmenu ul ul a:link,
+#cssmenu ul ul a:visited {
+  font-weight: 400;
+  font-size: 15px;
+}
+#cssmenu ul ul {
+  width: 180px;
+  background: none;
+  border-left: 20px solid transparent;
+}
+#cssmenu ul ul a {
+  padding: 8px 0;
+  border-bottom: 1px solid #eeeeee;
+}
+#cssmenu ul ul li {
+  padding: 0 20px;
+  background: #E5730A;
+}
+#cssmenu ul ul li:last-child {
+  border-bottom: 3px solid #d7d8da;
+  padding-bottom: 10px;
+}
+#cssmenu ul ul li:first-child {
+  padding-top: 10px;
+}
+#cssmenu ul ul li:last-child > a {
+  border-bottom: none;
+}
+#cssmenu ul ul li:first-child:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -20px;
+  top: 13px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid #E5730A;
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
+}
+
+
+.last{
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.first{
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+
+ #cssmenu > ul > li.active
+{
+	background: rgb(243,197,189); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(243,197,189,1) 0%, rgba(232,108,87,1) 50%, rgba(234,40,3,1) 51%, rgba(255,102,0,1) 75%, rgba(199,34,0,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(243,197,189,1)), color-stop(50%,rgba(232,108,87,1)), color-stop(51%,rgba(234,40,3,1)), color-stop(75%,rgba(255,102,0,1)), color-stop(100%,rgba(199,34,0,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3c5bd', endColorstr='#c72200',GradientType=0 ); /* IE6-9 */
+
+}
