--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -180,6 +180,7 @@ color:#67A0F5;
 	background: -ms-linear-gradient(top, #0b37ba 0%, #08298a 100%);
 	background: linear-gradient(top, #0b37ba 0%, #08298a 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@top-color', endColorstr='@bottom-color', GradientType=0);
+	/* border-bottom: 2px solid rgb(0, 7, 19); */
 }
 
 #leftmenu
@@ -298,6 +299,7 @@ color:#67A0F5;
 	border-radius: 10px;
 	margin-top: 56px;
 	margin-left: 325px;
+	box-shadow: 2px 2px 10px;
 	/* border : 6px solid #f7941e; */
 }
 
@@ -430,7 +432,6 @@ color:#67A0F5;
 	font-weight: bold;
 	/* padding-top: 21px; */
 	font-size: 15px;
-	
 }
 
 .menuitemHome{
@@ -1613,6 +1614,8 @@ a.form_button {
 	margin-right: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
+
+	box-shadow: 1px 1px 2px rgb(17, 16, 19);
 }
 
 .leftCol{
@@ -1861,6 +1864,8 @@ input.search-input{
 	margin-left: 94px;
 
 	/* background: red; */
+	box-shadow: 2px 2px 10px;
+	border-radius: 10px;
 }
 
 #cssmenu ul,
@@ -2029,9 +2034,4 @@ input.search-input{
 	background: -ms-linear-gradient(top,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%); /* W3C */
 	
-}
-
-
-#signup-ct{
-	text-align: justify;	
 }
