--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -1723,8 +1723,34 @@ a.form_button {
 	margin-top: -40px;
 }
 
+.menuitemRight{
+	position: relative;
+	left: 600px;
+}
 
-.menuitem a{
+.notification-bubble {
+    height: 18px;
+    width: 18px;
+    background: #f56c7e url(../images/notification-bg-clear.png) no-repeat center center scroll;
+    background-image: none\9;
+    position: fixed;
+    right: 250px;
+    top: 70px;
+    color: #fff;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
+    text-align: center;
+    font-size: 9px;
+    line-height: 18px;
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);
+    -moz-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .17), 0 1px 1px rgba(0, 0, 0, .2);
+    border-radius: 9px;
+    font-weight: bold;
+    cursor: pointer;
+    display: none;
+}
+
+.menuitem a, .menuitemRight a{
 	background: rgb(15, 85, 173);
 	border-radius: 5px;
 	margin-top: 4px;
