--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -288,7 +288,7 @@ color:#67A0F5;
 /*CAMBIE ESTO*/
 #content, #contentP
 {
-	width: 808px;
+	min-width: 808px;
 	height: 465px;
 	padding-left:30px;
 	padding-top: 20px;
@@ -301,6 +301,7 @@ color:#67A0F5;
 	margin-left: 325px;
 	box-shadow: 2px 2px 10px;
 	/* border : 6px solid #f7941e; */
+	margin-right: 150px;
 }
 
 #contentLogin
