Funcionalidades de Unidades y Especialistas
1.- Se cambió los nombres de clases y jsp de Department a Unit, y de
Doctor a Specialist
2.- Se crearon las funcionalidades para listar, crear, editar y eliminar
Unidades
3.- Se crearon las funcionalidades para listar, crear, editar y eliminar
Especialistas
4.- Se corrigió un detalle con el calendario, el cual imprimía el año 2
veces, y el rango para seleccionar el año era muy corto.

--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -1539,8 +1539,9 @@ div.box {
 	display: none;
 }
 
-#deleteUser, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, #hospitalizeUser, #deleteService, #deleteProtocol, #deleteSupply,
-#deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, #discount, #generateInvoice, #editStatus{
+#deleteUser, #deleteUnit, #deleteSpecialist, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, #hospitalizeUser, 
+#deleteService, #deleteProtocol, #deleteSupply, #deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, 
+#discount, #generateInvoice, #editStatus{
 	position: absolute;
 	text-align: center;
 	width: 295px;
@@ -1809,7 +1810,7 @@ fieldset .rightCol input[type="text"]{
 	width: 20%;
 }
 
-#otherPhone, #otherPhone2, #otherPhone3{
+#otherPhone, #otherPhone1, #otherPhone2, #otherPhone3{
 	margin-left: 194px;
 	
 }
