--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -615,6 +615,12 @@ font-weight: bold;
   font-size: 14px;
 }
 
+.bigger label{
+  float:left;
+  width:40%;
+}
+
+
 
 
 fieldset{
@@ -659,7 +665,14 @@ fieldset label{
 
 fieldset input[type="text"]{
   width:35%;
- 
+}
+
+.bigger input[type="text"]{
+  width:20%;
+}
+
+.target{
+	width: 25%;
 }
 
 .noReg{
@@ -1539,9 +1552,8 @@ div.box {
 	display: none;
 }
 
-#deleteUser, #deleteUnit, #deleteSpecialist, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, #hospitalizeUser, 
-#deleteService, #deleteProtocol, #deleteSupply, #deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, 
-#discount, #generateInvoice, #editStatus{
+#deleteUser, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, #hospitalizeUser, #deleteService, #deleteProtocol, #deleteSupply,
+#deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, #discount, #generateInvoice, #editStatus{
 	position: absolute;
 	text-align: center;
 	width: 295px;
@@ -1810,7 +1822,7 @@ fieldset .rightCol input[type="text"]{
 	width: 20%;
 }
 
-#otherPhone, #otherPhone1, #otherPhone2, #otherPhone3{
+#otherPhone, #otherPhone2, #otherPhone3{
 	margin-left: 194px;
 	
 }
