--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -288,8 +288,8 @@ color:#67A0F5;
 /*CAMBIE ESTO*/
 #content, #contentP
 {
-	min-width: 808px;
-	height: 465px;
+	width: 808px;
+	min-height: 465px;
 	padding-left:30px;
 	padding-top: 20px;
 	padding-right:30px;
@@ -487,6 +487,24 @@ color:#67A0F5;
 	padding-right:13px;
 	padding-bottom: 5px;
 }
+
+.ayudaitemHome a{
+	position: absolute;
+	right: 223px;
+	color: #ffffff !important;
+	border-radius: 10px;
+	margin-top: 11px;
+	padding-top: 1px;
+	padding-bottom: 6px;
+	text-shadow: 2px 2px black;
+	font-weight: bold;
+	font-size: 15px;
+}
+
+.ayudaitemHome a:hover{
+	color:#0098b6;
+}
+
 
 #menu a:hover{
 	color:#0098b6;
@@ -1553,7 +1571,9 @@ div.box {
 }
 
 #deleteUser, #deleteProduct, #deleteRequest, #refreshUser, #dischargeUser, #hospitalizeUser, #deleteService, #deleteProtocol, #deleteSupply,
-#deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, #closeAccount2, #discount, #generateInvoice, #editStatus{
+#deleteEvaluation, #deleteVitalSign, #deleteCash, #printUser, #closeAccount, #closeAccount2, #discount, #generateInvoice, #editStatus,
+#payment
+{
 	position: absolute;
 	text-align: center;
 	width: 295px;
