--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -500,17 +500,19 @@ color:#67A0F5;
 	padding-bottom: 5px;
 }
 
-.ayudaitemHome a{
+.ayudaitemHome a {
 	position: absolute;
-	right: 223px;
+	right: 105px;
 	color: #ffffff !important;
-	border-radius: 10px;
+	/* border-radius: 10px; */
 	margin-top: 11px;
 	padding-top: 1px;
 	padding-bottom: 6px;
 	text-shadow: 2px 2px black;
 	font-weight: bold;
 	font-size: 15px;
+	border-left: 1px solid white;
+	padding-left: 8px;
 }
 
 .ayudaitemHome a:hover{
@@ -2530,8 +2532,8 @@ nav {
   height: 26px;
   text-align: center;
   position: absolute;
-  top: 30px;
-  right: 5px;
+  top: 17px;
+  right: 150px;
 }
 nav ul {
   border-width: 1px;
@@ -2711,5 +2713,4 @@ iframe{
 	top: -3px;
 	height: 75px;
 	border: none;
-	left: 0px;
 }
