--- a/WebContent/css/styleAdmin.css
+++ b/WebContent/css/styleAdmin.css
@@ -442,7 +442,7 @@ color:#67A0F5;
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
-	font-weight: bold;
+	/* font-weight: bold; */
 	/* padding-top: 21px; */
 	font-size: 15px;
 }
@@ -464,7 +464,7 @@ color:#67A0F5;
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
-	font-weight: bold;
+	/* font-weight: bold; */
 	padding-top: 10px;
 	padding-bottom: 11px;
 	font-size: 15px;
@@ -492,7 +492,7 @@ color:#67A0F5;
 	text-align: center;
 	text-decoration: none;
 	color: #ffffff;
-	font-weight: bold;
+	/* font-weight: bold; */
 	padding-top: 9px;
 	font-size: 15px;
 	padding-left:13px;
@@ -509,7 +509,7 @@ color:#67A0F5;
 	padding-top: 1px;
 	padding-bottom: 6px;
 	text-shadow: 2px 2px black;
-	font-weight: bold;
+	/* font-weight: bold; */
 	font-size: 15px;
 	border-left: 1px solid white;
 	padding-left: 8px;
@@ -2152,7 +2152,7 @@ input.search-input{
   text-decoration: none;
   font-weight: 300;
   font-size: 15px;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 #cssmenu > ul {
   float: none;
@@ -2532,8 +2532,8 @@ nav {
   height: 26px;
   text-align: center;
   position: absolute;
-  top: 17px;
-  right: 150px;
+  top: 30px;
+  right: 40px;
 }
 nav ul {
   border-width: 1px;
